--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3"
